# hft

./: .gitignore  AWS.md  CMakeLists.txt  Makefile  debug.cpp  debugB.h  main.cpp
backtester/: BacktestListener.cpp  Backtester.h  L3LevelAlloc.cpp  README.md  RingBuffer.h  SPSC.cpp  Strategy.h  main.cpp  mytypedefs.h  tradeAnalysis.py
cppkern/: IGB82576Interop.c  IGB82576Interop.h  Makefile  containers.cpp  containers.h  coroutine.cpp  coroutine.h  cppsupport.cpp  defs.h  kernlib.h  test.cpp  test.h  ucontext_.h  ucontext_.s
cubist/: BacktestListener.cpp  Backtester.cpp  Backtester.h  L3LevelAlloc.h  L3OrderBook.cpp  L3OrderBook.h  README.md  RingBuffer.h  SPSC.h  Strategy.cpp  Strategy.h  main.cpp  mytypedefs.cpp  mytypedefs.h  orderbook_tester.cpp  ring_buffer.cpp  ring_buffer.h  tradeAnalysis.py
cubist/data/: latencyRaceEg.csv  latencyRaceOutput1_1.csv
data/: benchmarkVecMap.csv  benchmarkVecMapDelete.csv  benchmarkVecMapInsert.csv  input.txt  input2.txt  latencyRaceEg.csv  latencyRaceOutput1_1.csv  latencyRaceOutput1_20.csv  md1.csv  md2.csv  ordersubmitEg.csv
ebpf/: Makefile  README.md  hello.bpf.c  multipletracepoints.bpf.c  multipletracepoints.c  network.bpf.c  network.py  pythonSender.py  ringbufferoutput.py
ebpf/lll-1/: .gitignore  Makefile  README.md  defs.h  lll_1.bpf.c  lll_1_test.bpf.c  main.cpp  mytest.c  mytest.py  test.py
ebpf/lll-1/debug/: debug.md  recver  simpleReceiver.c
ebpf/python/: listener.py  udpcsum.py
lowlatencylab/: Kernel.md  L2OB.cpp  L2OB.h  Notes.md  Questions.md  README.md  defs.h  exchmcserver.cpp  exchmcserver.h  mdmcclient.cpp  mdmcclient.h
lowlatencylab/client/: CoroutineMngr.cpp  CoroutineMngr.h  IGB82576IO.cpp  IGB82576IO.h  L2OB.h  OE.cpp  OE.h  Strat.cpp  Strat.h  TCPStack.cpp  TCPStack.h  UDPBuffer.cpp  UDPBuffer.h  XDPIO.cpp  XDPIO.h  defs.h  launch.cpp  launch.h  main.cpp  mdmcclient.cpp  mdmcclient.h  tcpmain.cpp
lowlatencylab/client/bpf/: Makefile  strat.bpf.c
lowlatencylab/python/: mcast_listener.py
lowlatencylab/server/: MDServer.h  OEServer.h  exchmcserver.cpp
networking/: .load_test.sh.swp  README.md  epoll_test.cpp  io_uring_eg.cpp  load_test.sh  main.cpp  select_io.cpp  select_io.h  simple_server.cpp
notebooks/: LowLatencyLab.ipynb  Untitled.ipynb  Untitled1.ipynb
